--- a/roles/deploy_flask_app/tasks/update_inventory.yaml
+++ b/roles/deploy_flask_app/tasks/update_inventory.yaml
@@ -15,7 +15,7 @@
       private_ip: "{{ deploy_flask_app__bastion_private_ip }}"
       vpc_id: "{{ deploy_flask_app_vpc_id }}"
       rds_info:
-        # host: "{{ deploy_flask_app__rds_host }}"
-        # name: "{{ deploy_flask_app__rds_dbname }}"
+        host: "{{ deploy_flask_app__rds_host }}"
+        name: "{{ deploy_flask_app__rds_dbname }}"
         master_user_password: "{{ deploy_flask_app_rds_master_password }}"
         master_username: "{{ deploy_flask_app_rds_master_username }}"
