add IAM role to install package into bastion

--- a/roles/deploy_flask_app/files/run_app.yaml
+++ b/roles/deploy_flask_app/files/run_app.yaml
@@ -20,6 +20,13 @@
         - regex: ^(# *)?ClientAliveCountMax
           line: ClientAliveCountMax 3
 
+    - name: Install Podman
+      ansible.builtin.yum:
+        name:
+          - podman
+        update_cache: True
+        state: present
+
     - name: Pull image from private registry
       ansible.builtin.shell:
         cmd: >
