--- a/changelogs/fragments/20231219-deploy_flask_app-update-arguments-spec.yml
+++ b/changelogs/fragments/20231219-deploy_flask_app-update-arguments-spec.yml
@@ -3,3 +3,8 @@ breaking_changes:
   - >-
     roles/deploy_flask_app - Add parameter ``deploy_flask_app_bastion_ssh_private_key`` to define
     the path to the ssh private key file to use to connect to the bastion host (https://github.com/redhat-cop/cloud.aws_ops/issues/103).
+  - >-
+    roles/deploy_flask_app - The following parameters no longer required have been removed
+    ``deploy_flask_app_bastion_host_required_packages``, ``deploy_flask_app_local_registry_port``,
+    ``deploy_flask_app_local_registry_pwd``, ``deploy_flask_app_local_registry_user``,
+    ``deploy_flask_app_git_repository`` (https://github.com/redhat-cop/cloud.aws_ops/issues/103).
