--- a/roles/deploy_flask_app/defaults/main.yml
+++ b/roles/deploy_flask_app/defaults/main.yml
@@ -1,2 +1,3 @@
 ---
-deploy_flask_app_workers_ssh_private_key: "/tmp/id_rsa"
+deploy_flask_app_workers_ssh_private_key: /tmp/id_rsa
+deploy_flask_app_container_image: docker.io/aubinredhat/webapp:1.0.0
