--- a/playbooks/webapp/vars/main.yaml
+++ b/playbooks/webapp/vars/main.yaml
@@ -14,6 +14,7 @@ operation: create
 
 image_filter: Fedora-Cloud-Base-35-*gp2-0
 public_secgroup_name: "{{ resource_prefix }}-sg"
+ec2_iam_role_name: "{{ resource_prefix }}-role"
 rds_subnet_group_name: "{{ resource_prefix }}-rds-sg"
 rds_secgroup_name: "{{ resource_prefix }}-rds-sec"
 rds_identifier: "{{ resource_prefix }}-rds-01"
@@ -30,29 +31,16 @@ rds_listening_port: 5432
 deploy_flask_app_sshkey_pair_name: "{{ resource_prefix }}-key"
 deploy_flask_app_bastion_host_name: "{{ resource_prefix }}-bastion"
 deploy_flask_app_bastion_host_username: fedora
-deploy_flask_app_bastion_host_required_packages:
-  - python3
-  - python-virtualenv
-  - sshpass
-  - git
-  - gcc
-  - podman
-  - httpd-tools
-  - ansible-core
 deploy_flask_app_workers_instance_type: t2.xlarge
 deploy_flask_app_workers_user_name: fedora
 deploy_flask_app_number_of_workers: 2
 deploy_flask_app_listening_port: 5000
-deploy_flask_app_git_repository: https://github.com/abikouo/webapp_pyflask_demo.git
 deploy_flask_app_config:
   env: development
   admin_user: admin
   admin_password: admin
   app_dir: /app/pyapp
 deploy_flask_app_force_init: false
-deploy_flask_app_local_registry_user: ansible
-deploy_flask_app_local_registry_pwd: testing123
-deploy_flask_app_local_registry_port: "{{ deploy_flask_app_listening_port }}"
 deploy_flask_app_rds_master_password: L#5cH2mgy_
 deploy_flask_app_rds_master_username: ansible
 
