--- a/roles/deploy_flask_app/tasks/start_containers.yaml
+++ b/roles/deploy_flask_app/tasks/start_containers.yaml
@@ -74,10 +74,8 @@
         deploy_flask_app_worker_hostname: "{{ '{{' }} inventory_hostname {{ '}}' }}"
 
     - name: Deploy application into workers
-      ansible.builtin.shell:
-        cmd: >-
-          ansible-playbook
-          -i {{ deploy_flask_app_workers_inventory_file }}
-          {{ deploy_flask_app_workers_playbook_file }}
-          -v
-      changed_when: false
+      ansible.builtin.command: >-
+        ansible-playbook
+        --inventory {{ deploy_flask_app_workers_inventory_file }}
+        {{ deploy_flask_app_workers_playbook_file }}
+        -v
