--- a/tests/integration/targets/setup_rsa_keys/handlers/main.yml
+++ b/tests/integration/targets/setup_rsa_keys/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Delete temporary RSA key directory
+- name: Delete RSA key directory
   ansible.builtin.file:
     state: absent
-    path: "{{ setup_rsa_keys__tmpdir }}"
+    path: "{{ setup_rsa_keys__path }}"
   ignore_errors: true
