--- a/playbooks/webapp/vars/main.yaml
+++ b/playbooks/webapp/vars/main.yaml
@@ -12,7 +12,7 @@ resource_tags:
   prefix: "{{ resource_prefix }}"
 operation: create
 
-image_filter: Fedora-Cloud-Base-35-*gp2-0
+image_filter: Fedora-Cloud-Base-38-*
 public_secgroup_name: "{{ resource_prefix }}-sg"
 ec2_iam_role_name: "{{ resource_prefix }}-role"
 rds_subnet_group_name: "{{ resource_prefix }}-rds-sg"
@@ -23,7 +23,7 @@ rds_instance_class: db.m6g.large
 rds_instance_name: mysampledb123
 rds_engine: postgres
 rds_engine_version: "14.8"
-bastion_host_type: t2.xlarge
+bastion_host_type: t3.micro
 bastion_host_venv_path: ~/env
 rds_listening_port: 5432
 
@@ -31,7 +31,7 @@ rds_listening_port: 5432
 deploy_flask_app_sshkey_pair_name: "{{ resource_prefix }}-key"
 deploy_flask_app_bastion_host_name: "{{ resource_prefix }}-bastion"
 deploy_flask_app_bastion_host_username: fedora
-deploy_flask_app_workers_instance_type: t2.xlarge
+deploy_flask_app_workers_instance_type: t3.micro
 deploy_flask_app_workers_user_name: fedora
 deploy_flask_app_number_of_workers: 2
 deploy_flask_app_listening_port: 5000
