--- a/roles/deploy_flask_app/tasks/start_containers.yaml
+++ b/roles/deploy_flask_app/tasks/start_containers.yaml
@@ -44,6 +44,10 @@
           path: "~/.ssh"
         - state: touch
           path: "~/.ssh/config"
+      retries: 5
+      delay: 5
+      until: result is successful
+      register: result
 
     - name: Update local .ssh/config
       ansible.builtin.blockinfile:
@@ -51,18 +55,30 @@
         insertafter: EOF
         dest: "~/.ssh/config"
         content: "{{ lookup('template', 'bastion_ssh_config.j2') }}"
+      retries: 5
+      delay: 5
+      until: result is successful
+      register: result
 
     - name: Copy remote ssh private key file into bastion
       ansible.builtin.copy:
         src: "{{ deploy_flask_app_bastion_ssh_private_key }}"
         dest: "{{ deploy_flask_app_workers_ssh_private_key }}"
         mode: 0400
+      retries: 5
+      delay: 5
+      until: result is successful
+      register: result
 
     - name: Generate workers inventory file
       ansible.builtin.copy:
         content: "{{ lookup('template', 'workers_inventory.yaml.j2') }}"
         dest: "{{ deploy_flask_app_workers_inventory_file }}"
         mode: 0755
+      retries: 5
+      delay: 5
+      until: result is successful
+      register: result
 
     - name: Generate playbook to deploy application
       ansible.builtin.copy:
@@ -72,6 +88,10 @@
       vars:
         deploy_flask_app_instances_list: "{{ deploy_flask_app_instances | join(',') }}"
         deploy_flask_app_worker_hostname: "{{ '{{' }} inventory_hostname {{ '}}' }}"
+      retries: 5
+      delay: 5
+      until: result is successful
+      register: result
 
     - name: Deploy application into workers
       ansible.builtin.command: >-
@@ -79,3 +99,7 @@
         --inventory {{ deploy_flask_app_workers_inventory_file }}
         {{ deploy_flask_app_workers_playbook_file }}
         -v
+      retries: 5
+      delay: 5
+      until: result is successful
+      register: result
