--- a/roles/deploy_flask_app/tasks/setup_infra.yaml
+++ b/roles/deploy_flask_app/tasks/setup_infra.yaml
@@ -70,9 +70,4 @@
         subnets:
           - "{{ deploy_flask_app__public_subnet_id }}"
         scheme: internet-facing
-        wait: true
-        wait_timeout: 360
-      retries: 5
-      delay: 10
-      until: deploy_flask_app_lb_result is successful
-      register: deploy_flask_app_lb_result
+        wait: false
