Remove all conditional checks

--- a/roles/deploy_flask_app/tasks/setup_infra.yaml
+++ b/roles/deploy_flask_app/tasks/setup_infra.yaml
@@ -70,4 +70,4 @@
         subnets:
           - "{{ deploy_flask_app__public_subnet_id }}"
         scheme: internet-facing
-        wait: false
+        wait: true
