update wait_timeout while creating load balancer

--- a/roles/deploy_flask_app/tasks/setup_infra.yaml
+++ b/roles/deploy_flask_app/tasks/setup_infra.yaml
@@ -71,3 +71,4 @@
           - "{{ deploy_flask_app__public_subnet_id }}"
         scheme: internet-facing
         wait: true
+        wait_timeout: 360
