Revert update of tests/integration/targets/setup_rsa_keys

--- a/tests/integration/targets/setup_rsa_keys/handlers/main.yml
+++ b/tests/integration/targets/setup_rsa_keys/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Delete RSA key directory
+- name: Delete temporary RSA key directory
   ansible.builtin.file:
     state: absent
-    path: "{{ setup_rsa_keys__path }}"
+    path: "{{ setup_rsa_keys__tmpdir }}"
   ignore_errors: true
