--- a/tests/integration/targets/setup_rsa_keys/tasks/main.yml
+++ b/tests/integration/targets/setup_rsa_keys/tasks/main.yml
@@ -1,26 +1,16 @@
 ---
+- name: Create temporary directory to generate keys
+  ansible.builtin.tempfile:
+    state: directory
+    suffix: ssh
+  register: setup_rsa_keys__tmpdir
+  notify: 'Delete temporary RSA key directory'
+
+- name: Generate RSA keys
+  community.crypto.openssh_keypair:
+    path: "{{ setup_rsa_keys__tmpdir.path }}/id_rsa"
+
 - name: Define path to private and public keys
   ansible.builtin.set_fact:
-    setup_rsa_keys__public_key_file: "{{ setup_rsa_keys__path }}/id_rsa.pub"
-    setup_rsa_keys__private_key_file: "{{ setup_rsa_keys__path }}/id_rsa"
-
-- name: Check if ssh directory exists
-  ansible.builtin.stat:
-    path: "{{ item }}"
-  register: stats
-  with_items:
-    - "{{ setup_rsa_keys__public_key_file }}"
-    - "{{ setup_rsa_keys__private_key_file }}"
-
-- name: Generate RSA keys file
-  when: stats.results | selectattr('stat.exists', 'equalto', false) | list | length > 0
-  block:
-    - name: Create directory to generate keys in
-      ansible.builtin.file:
-        path: "{{ setup_rsa_keys__path }}"
-        state: directory
-      notify: 'Delete RSA key directory'
-
-    - name: Generate RSA keys
-      community.crypto.openssh_keypair:
-        path: "{{ setup_rsa_keys__path }}/id_rsa"
+    setup_rsa_keys__public_key_file: "{{ setup_rsa_keys__tmpdir.path }}/id_rsa.pub"
+    setup_rsa_keys__private_key_file: "{{ setup_rsa_keys__tmpdir.path }}/id_rsa"
