Support storage of key pair into S3 bucket - Needed for running on AWX (container)

--- a/playbooks/webapp/tasks/delete.yaml
+++ b/playbooks/webapp/tasks/delete.yaml
@@ -8,6 +8,11 @@
       region: "{{ region | default(aws_region) }}"
 
   block:
+    - name: Delete S3 bucket
+      amazon.aws.s3_bucket:
+        name: "{{ bucket_name }}"
+        state: absent
+        force: true
 
     - name: Get vpc information
       amazon.aws.ec2_vpc_net_info:
