--- a/playbooks/webapp/tasks/create.yaml
+++ b/playbooks/webapp/tasks/create.yaml
@@ -202,21 +202,8 @@
             db_instance_identifier: "{{ rds_identifier }}"
           register: rds_result
 
-    - name: Set 'sshkey_file' variable
-      ansible.builtin.set_fact:
-        sshkey_file: ~/private-key-{{ deploy_flask_app_sshkey_pair_name }}-{{ region | default(aws_region) }}
-
-    - name: Create key pair to connect to the VM
-      amazon.aws.ec2_key:
-        name: "{{ deploy_flask_app_sshkey_pair_name }}"
-      register: rsa_key
-
-    - name: Save private key into file
-      ansible.builtin.copy:
-        content: "{{ rsa_key.key.private_key }}"
-        dest: "{{ sshkey_file }}"
-        mode: 0400
-      when: rsa_key is changed
+    - name: Create key pair to connect to the virtual machine
+      ansible.builtin.include_tasks: manage_keypair.yaml
 
     - name: Ensure IAM instance role exists
       amazon.aws.iam_role:
